--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2526,63 +2526,49 @@ The initial eight chapters of this specification are \emph{informative} providin
 \medskip \noindent 
 Chapter \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) in Extended
 Backus–Naur Form (EBNF).  
-
-\medskip \noindent 
 Chapter \ref{a:text-syntax} provides a human friendly text serialization of the abstract syntax of 
 \DOL (\emph{normative}). 
+Annex \ref{a:MOF} contains the abstract syntax specified as an SMOF compliant meta model.
+(\emph{informative}).
 
-\medskip \noindent 
-Chapter \ref{c:semantics} defines the model-theoretic semantics of \DOL (\emph{normative}). 
+\medskip \noindent Chapter \ref{c:semantics} defines the
+model-theoretic semantics of \DOL on the abstract syntax, and also
+makes the notion of heterogeneous logical environment (providing
+languages, logics and translations) precise (\emph{normative}).
 
-\medskip \noindent 
-Annex \ref{a:lola} specifies an RDF vocabulary for describing OMS languages that 
-conform with \DOL  (\emph{normative}). 
+\medskip \noindent Annex \ref{a:lola} specifies an RDF vocabulary for
+the terms in chapter~\ref{terms-and-defs}, and for OMS languages and
+translation that conform with \DOL  (\emph{normative}).
 
-\medskip \noindent 
-Annex \ref{a:owl} discusses the conformance of OWL2 with \DOL  (\emph{normative}). \ednote{Elaborate after the annex has been finished.}
-
-\medskip \noindent 
-Annex \ref{a:cl} discusses the conformance of OWL2 with \DOL  (\emph{normative}). \ednote{Elaborate  after the annex has been finished.}
-
-\medskip \noindent 
-Annex \ref{a:rdfs} discusses the conformance of RDF and RDFS with \DOL  (\emph{normative}). The
- conformance is established by defining institutions for RDF and RDFS. 
-
-\medskip \noindent 
-Annex \ref{a:uml-class} discusses the conformance of UML class diagrams with \DOL 
- (\emph{normative}).\ednote{Elaborate after the annex has been finished.}
-
-\medskip \noindent 
-Annex \ref{a:casl} discusses the conformance of \CASL with \DOL  (\emph{normative}).\ednote{Review
- this after the annex has been finished.}
+\medskip \noindent Various languages are shown to be DOL conformant in
+informative annexes: OWL2 (annex \ref{a:owl}), Common Logic
+(annex~\ref{a:cl}), RDF and RDFS (annex~\ref{a:rdfs}), UML class
+diagrams (annex~\ref{a:uml-class}, EMOF (annex~\ref{a:EMOF}), and
+\CASL (annex \ref{a:casl}).
 
 \medskip \noindent 
 Annex \ref{a:graph}  provides a core graph of logics and translations, covering those OMS languages
-whose conformance with DOL is established in the preceding, normative annexes (\emph{normative}). 
-
-\medskip \noindent 
+whose conformance with DOL is established in the preceding annexes (\emph{informative}). 
 Annex \ref{a:ext-graph} extends the graph presented in Annex \ref{a:graph}  by a list of OMS
-language whose conformance with DOL will be established by a registry.
+language whose conformance with DOL will be established by a registry
 (\emph{informative}).
 
 \medskip \noindent 
 Annex \ref{a:uses} provides of \DOL texts, which provide examples for all \DOL constructs, which 
-are specified in the abstract syntax. 
+are specified in the abstract syntax 
 (\emph{informative}).
-
-\medskip \noindent 
 Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied. For 
 each scenario, we list its status of implementation, the \DOL features it makes use of, and 
-provide a brief description.
+provide a brief description
+(\emph{informative}).
+
+Annex~\ref{a:tools} gives an overview of avaiable software tools for
+DOL.  Annex~\ref{a:loc/id} discusses the implementation of a
+linked-data compliant IRI scheme used in one of these tools
 (\emph{informative}).
 
 \medskip \noindent 
-Annex \ref{a:MOF} contains the abstract syntax specified as an SMOF compliant meta model.
-(\emph{informative}).
-
-
-\medskip \noindent 
-The bibliography contains \ref{a:bibliography} references to the literature that is cited in this document.
+The bibliography contains \ref{a:bibliography} references to the literature that is cited in this document
 (\emph{informative}).
 
 
@@ -9315,7 +9301,7 @@ mappings written in DOL and DOL-conforming languages.  It supports the
 same range of OMS languages and language translations as Hets (indeed,
 Hets is used for analyzing DOL files). The novel aspect w.r.t.\ Hets
 is the provision of git-based repositories and IRIs for libraries,
-OMS, symbols and mappings (see also Annex~\ref{loc/id}).
+OMS, symbols and mappings (see also Annex~\ref{a:loc/id}).
 
 Users of Ontohub/Modelhub/Spechub can upload, browse, search and annotate 
 OMS in various languages via a web frontend, 
@@ -9399,7 +9385,7 @@ In the future, these APIs shall be aligned with OMG's standardization
 effort API4KB.
 
 
-\infannex{Ontohub loc/id v2}\label{loc/id}
+\infannex{Ontohub loc/id v2}\label{a:loc/id}
 
 
 
